# github-copilot-migrating-languages

./: spec.md
workshop/rust-app/: Cargo.toml  Makefile
workshop/rust-app/src/: main.rs
workshop/rust-app/static/: app.js  index.html  style.css
workshop/tests/: test_endpoints.sh
